Terumo Partdev/src/objects/CS_Duplicate_Check_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>nsebastian 11/4/2015: This is the list of fields compared between two objects to check for duplicates</description>
    <fields>
        <fullName>Source_Field__c</fullName>
        <description>nsebastian 11/4/2015:  This is the API Name of the source object&apos;s field to be compared</description>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <description>nsebastian 11/4/2015: This is the API Name of the source object of which new record is created.</description>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <description>nsebastian 11/4/2015: This is the API Name of the target object&apos;s field to compare</description>
        <label>Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <description>nsebastian 11/4/2015: This is the target object (API Name) against which the new record is checked for duplicates</description>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Duplicate check fields</label>
</CustomObject>